src/theme/styles.css
body {
	padding: 0;
	margin: 0;
}

h1 {
	font-size: 3em;
}

button {
	background-color: #1D7324 !important;
}

.bg-contain {
	background-size: contain;
}

.bg-white img {
	background-color: #efefef;
}

.center-inline {
	text-align: center;
	display: inline;
}

.color-primary {
	color: #96B961;
}
.color-primary-dark {
	color: #1D7324;
}
.color-accent {
	color: #6BACB8;
}
.color-accent-dark {
	color: #1F4B99;
}

.card-workout {
	display: inline-block;
	margin: 20px 20px;
	padding-bottom: 20px;
	text-align: center;
	max-width: 350px;
}

.workout-detail {
	padding: 30px 20px;
}

.exercise {
	text-align: center;
}
.exercise img {
	width: 100%;
	max-height: 50vh;
	vertical-align: middle;
}

.exercise .example-photo {
	width: 100%;
	height: 50vh;
	vertical-align: middle;
	background: no-repeat center center;
	background-size: contain;
}

